@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2011-02-18"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20110218
-#define RUBY_PATCHLEVEL 332
+#define RUBY_PATCHLEVEL 333
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
